manifests/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: colors
  name: colors
spec:
  selector:
    matchLabels:
      app: colors
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: colors
    spec:
      containers:
      - image: ghcr.io/vrutkovs/color-demo:latest
        name: colors
        resources: {}
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5

---
