manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: colors
  annotations:
    route.openshift.io/termination: edge
  labels:
    app: colors
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: colors
            port:
              number: 8080
