manifests/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: colors
  labels:
    app: colors
spec:
  path: /
  to:
    kind: Service
    name: colors
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
